stash fix makefile + broken graphics

--- a/ninjaturdle/makefile
+++ b/ninjaturdle/makefile
@@ -1,40 +1,74 @@
-# makefile for nes game + char bank browser
-
+##############################################################################
+# Paths to cc65 tools
+##############################################################################
 CC65 = ../tools/cc65/bin/cc65
 CA65 = ../tools/cc65/bin/ca65
 LD65 = ../tools/cc65/bin/ld65
-NAME = ninjaturdle
-BANK_SWAP = bank_swap
-CFG = mmc1_32k.cfg
 
+# Linker config (adjust if needed)
+CFG  = mmc1_32k.cfg
 
-.PHONY: default clean
+# Compiler/assembler flags
+CFLAGS = -Oirs --add-source
+AFLAGS =
 
-default: $(NAME).nes $(BANK_SWAP).nes
+# Runtime library path
+RUNTIME = ../tools/cc65/lib/nes.lib
 
+# Disable default .c/.o rules so it won't fall back to clang
+.SUFFIXES:
 
-#target: dependencies
+##############################################################################
+# Source files
+##############################################################################
+CSRC = \
+  ninjaturdle.c \
+  bank_swap.c
 
-$(NAME).nes: $(NAME).o crt0.o $(CFG)
-	$(LD65) -C $(CFG) -o $(NAME).nes crt0.o $(NAME).o nes.lib -Ln $(NAME)_labels.txt --dbgfile $(NAME)_dbg.txt
+# Level files to compile
+LEVEL_FILES = \
+  BG/w1l1.c \
+  BG/w1l2.c \
+  BG/w1l3.c
 
-$(BANK_SWAP).nes: $(BANK_SWAP).o crt0.o $(CFG)
-	$(LD65) -C $(CFG) -o $(BANK_SWAP).nes crt0.o $(BANK_SWAP).o nes.lib -Ln $(BANK_SWAP)_labels.txt --dbgfile $(BANK_SWAP)_dbg.txt
+# Object files from level files
+LEVEL_OBJS = $(LEVEL_FILES:.c=.o)
 
+# All object files
+OBJS = $(CSRC:.c=.o) $(LEVEL_OBJS) crt0.o
+
+##############################################################################
+# Default target
+##############################################################################
+all: ninjaturdle.nes
+
+##############################################################################
+# Rule: compile .c -> .o (cc65 -> .s -> ca65 -> .o)
+##############################################################################
+%.o: %.c
+	$(CC65) $(CFLAGS) $< -o $(<:.c=.s)
+	$(CA65) $(AFLAGS) $(<:.c=.s) -o $@
+
+##############################################################################
+# Rule: assemble .s -> .o
+##############################################################################
+%.o: %.s
+	$(CA65) $(AFLAGS) $< -o $@
+
+##############################################################################
+# Special rule for crt0.s
+##############################################################################
 crt0.o: crt0.s ninjaturdle.chr ninjaturdle2.chr MUSIC/TestMusic3.s MUSIC/SoundFx.s
-	$(CA65) crt0.s -g
+	$(CA65) $(AFLAGS) $< -o $@
 
-$(NAME).o: $(NAME).s
-	$(CA65) $(NAME).s -g
+##############################################################################
+# Link
+##############################################################################
+ninjaturdle.nes: ninjaturdle.o bank_swap.o $(LEVEL_OBJS) crt0.o
+	$(LD65) -C $(CFG) -o $@ -Ln ninjaturdle.lbl ninjaturdle.o $(LEVEL_OBJS) crt0.o $(RUNTIME)
 
-$(NAME).s: $(NAME).c sprites.h ninjaturdle.h level_data.c NES_ST/title.h
-	$(CC65) -Oirs $(NAME).c --add-source
-
-$(BANK_SWAP).o: $(BANK_SWAP).s
-	$(CA65) $(BANK_SWAP).s -g
-
-$(BANK_SWAP).s: $(BANK_SWAP).c
-	$(CC65) -Oirs $(BANK_SWAP).c --add-source
-
+##############################################################################
+# Cleanup
+##############################################################################
 clean:
-	rm -f $(NAME).nes $(BANK_SWAP).nes *.o *_labels.txt *_dbg.txt
+	rm -f $(OBJS) ninjaturdle.s bank_swap.s BG/w1l1.s BG/w1l2.s BG/w1l3.s *.lbl ninjaturdle.nes
